Fix code blocks word wrapping that was messing with small screens

--- a/sass/pages/_content.scss
+++ b/sass/pages/_content.scss
@@ -31,6 +31,7 @@ $content-font-size: 1.22rem;
         border-radius: $border-radius;
         word-wrap: break-word;
         white-space: pre-wrap;
+        word-break: break-word;
     }
 
     a code, a:active code, a:visited code, a:link code {
